test/mutation_analysis/s0032_longest_valid_parentheses/hafis/starchat/mutants/22/result.txt
./test/mutation_analysis/s0032_longest_valid_parentheses/hafis/starchat/mutants/22/Solution.java:55: error: unreachable statement
        return max;
        ^
1 error
